--- a/TextileResearchDevelopment/Views/Fabric/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Fabric/Index.cshtml
@@ -483,7 +483,7 @@
                         // return native menu if pressing control
                         if (e.ctrlKey) return;
 
-                        if ($('#knitTable tbody tr').hasClass('selected') == false) return;
+                        if ($('#fabricTable tbody tr').hasClass('selected') == false) return;
 
                         //open menu
                         var $menu = $(settings.menuSelector)
@@ -1140,7 +1140,7 @@
                 "type": "GET",
                 "dataType": "JSON"
             },
-            "autowidth": false,
+            "autoWidth": false,
             "scrollY": true,
             "scrollX": true,
             "Sorting": true,
