--- a/TextileResearchDevelopment/Views/Peach/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Peach/Index.cshtml
@@ -6,9 +6,8 @@
 }
 
 <head>
+    <script type="text/javascript" src="~/Scripts/bootstrap.js"></script>
     <script type="text/javascript" src="~/Scripts/bootstrap3-typeahead.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/bootstrap-multiselect.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap-multiselect.css">
     <style>
         tfoot input {
             width: 100%;
@@ -31,7 +30,7 @@
     <input type="checkbox" id="hidden" value="option1" style="display:none;">
 
     <div class="text-left">
-        <button href="" id="FabricSelection" class="btn-info sm-4" >
+        <button href="" id="FabricSelection" class="btn-info sm-4">
             Select Fabric
         </button>
     </div>
@@ -126,7 +125,7 @@
 
     <div class="panel panel-default ">
         <div class="panel-heading">
-            <h5 class="panel-title"><i class="icon-stack-plus position-left"></i>Create Compacting Order</h5>
+            <h5 class="panel-title"><i class="icon-stack-plus position-left"></i>Create Peach Order</h5>
         </div>
         <div class="panel-body">
             <form id="PeachForm">
@@ -447,25 +446,25 @@
             });
         }
 
+        $('#Peachtable tfoot th').each(function () {
+            var title = $(this).text();
+            $(this).html('<input type="text" placeholder="Search" />');
+        });
+
         var Peachtable = $('#Peachtable').DataTable({
             dom: 'Bfrtip',
             buttons: [
                 {
-                    extend: 'excelHtml5',
-                    exportOptions: {
-                        columns: ':visible'
-                    }
-                },
-
-                'colvis'
+                    extend: 'excelHtml5'
+                }
             ],
             "ajax":
             {
-                "url": "/Compacting/GetData",
+                "url": "/Peach/GetData",
                 "type": "GET",
                 "dataType": "JSON"
             },
-            "autowidth": false,
+            "autoWidth": false,
             "scrollY": true,
             "scrollX": true,
             "Sorting": true,
@@ -565,9 +564,16 @@
             ]
         });
 
-        $('#Peachtable tfoot th').each(function () {
-            var title = $(this).text();
-            $(this).html('<input type="text" placeholder="Search" />');
+        Peachtable.columns().every(function () {
+            var that = this;
+
+            $('input', this.footer()).on('keyup change clear', function () {
+                if (that.search() !== this.value) {
+                    that
+                        .search(this.value)
+                        .draw();
+                }
+            });
         });
 
         $('#fabricSelectionTable tbody').on('click', 'tr', function () {
@@ -590,14 +596,10 @@
                 }
                 else {
                     Peachtable.$('tr.selected').removeClass('selected');
+                    Reset();
                     $(this).addClass('selected');
                     var rowdata = Peachtable.row(this).data();
-                    if (rowdata.ApprovedStatus != 0) {
-                        $('#saveBtn').prop("disabled", false);
-                        $('#updateBtn').prop("disabled", true);
-                        $('#reviseBtn').prop("disabled", true);
-                    }
-                    else {
+                    if (rowdata.ApprovedStatus == 0) {
                         Setvalue(rowdata);
                         $('#saveBtn').prop("disabled", true);
                         $('#updateBtn').prop("disabled", false);
@@ -630,7 +632,7 @@
                     cm: cm,
                     OrderNo: $("#OrderNoSL").val().length > 0 ? $("#OrderNoSL").val().toString() : '',
                     RefNo: $("#RefNoSL").val().length > 0 ? $("#ColorSL").val().toString() : '',
-                    Note : "Peach"
+                    Note: "Peach"
                 };
 
                 $.ajax({
@@ -663,7 +665,7 @@
 
         $("#FabricSelection").click(function () {
             event.preventDefault();
-
+            $("#modalFabricSelection").modal('show');
             selectedFabricRowId = 0; ResetFabric(); fabricSelectionTable.clear().draw();
 
             loadBuyerList();
@@ -674,7 +676,7 @@
                 "scrollX": true,
                 "Sorting": true,
                 "searching": true,
-                "autowidth": false,
+                "autoWidth": false,
                 "select": {
                     style: 'single'
                 },
@@ -762,7 +764,7 @@
                 };
                 $.ajax({
                     type: "POST",
-                    url: "/Compacting/CRUD",
+                    url: "/Peach/CRUD",
                     contentType: "application/json; charset=utf-8",
                     dataType: "json",
                     data: JSON.stringify(Obj),
@@ -819,7 +821,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "/Compacting/CRUD",
+                    url: "/Peach/CRUD",
                     contentType: "application/json; charset=utf-8",
                     dataType: "json",
                     data: JSON.stringify(Obj),
@@ -877,7 +879,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "/Compacting/Revise",
+                    url: "/Peach/Revise",
                     contentType: "application/json; charset=utf-8",
                     dataType: "json",
                     data: JSON.stringify(Obj),
@@ -966,7 +968,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "/Compacting/Delete",
+                url: "/Peach/Delete",
                 contentType: "application/json; charset=utf-8",
                 dataType: "json",
                 data: JSON.stringify({ "Id": Id }),
@@ -1002,7 +1004,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "/Compacting/Approve",
+                url: "/Peach/Approve",
                 contentType: "application/json; charset=utf-8",
                 dataType: "json",
                 data: JSON.stringify(Obj),
@@ -1039,7 +1041,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "/Compacting/Unapprove",
+                url: "/Peach/Unapprove",
                 contentType: "application/json; charset=utf-8",
                 dataType: "json",
                 data: JSON.stringify(Obj),
